<?xml version="1.0"?>
<package format="3">
  <name>ros_streamer</name>
  <version>0.1.0</version>
  <description>WebRTC camera streaming node using FastAPI + aiortc for ROS 2 Humble.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
